--- a/fe/index.html
+++ b/fe/index.html
@@ -68,7 +68,8 @@
 		</p>
 	</footer>
 	<!-- Scripts here. Don't remove ↓ -->
-	<script src="node_modules/todomvc-common/base.js"></script>
+	<script src="lib/todomvc-common/base.js"></script>
+	<script src="https://code.jquery.com/jquery-1.4.4.min.js"></script>
 	<script src="js/app.js"></script>
 </body>
 </html>
