--- a/fe/index.html
+++ b/fe/index.html
@@ -23,31 +23,17 @@
 			<ul class="todo-list">
 				<!-- These are here just to show the structure of the list items -->
 				<!-- List items should get the class `editing` when editing and `completed` when marked as completed -->
-				<li class="completed">
-					<div class="view">
-						<input class="toggle" type="checkbox" checked> <label>Taste
-							JavaScript</label>
-						<button class="destroy"></button>
-					</div> <input class="edit" value="Create a TodoMVC template">
-				</li>
-				<li>
-					<div class="view">
-						<input class="toggle" type="checkbox"> <label>Buy
-							a unicorn</label>
-						<button class="destroy"></button>
-					</div> <input class="edit" value="Rule the web">
-				</li>
 			</ul>
 		</section>
 		<!-- This footer should hidden by default and shown when there are todos -->
 		<footer class="footer">
 			<!-- This should be `0 items left` by default -->
-			<span class="todo-count"><strong>0</strong> item left</span>
+			<span class="todo-count"></span>
 			<!-- Remove this if you don't implement routing -->
 			<ul class="filters">
-				<li><a class="selected" href="#/">All</a></li>
-				<li><a href="#/active">Active</a></li>
-				<li><a href="#/completed">Completed</a></li>
+				<li><a class="selected filter" href="#/">All</a></li>
+				<li><a class="filter" href="#/">Active</a></li>
+				<li><a class="filter" href="#/">Completed</a></li>
 			</ul>
 			<!-- Hidden if no completed items are left ↓ -->
 			<button class="clear-completed">Clear completed</button>
@@ -61,7 +47,7 @@
 		</p>
 		<!-- Change this out with your name and url ↓ -->
 		<p>
-			Created by <a href="http://todomvc.com">you</a>
+			Created by <a href="http://todomvc.com">sungyun</a>
 		</p>
 		<p>
 			Part of <a href="http://todomvc.com">TodoMVC</a>
